--- a/templates/dashboard/company/index.html.twig
+++ b/templates/dashboard/company/index.html.twig
@@ -49,7 +49,7 @@
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                                     <a href="{{ path('dashboard_address_show', { id: company.getAddress().getId() }) }}" class="underline opacity-75">
-                                        {{ company.getAddress().getNbStreet() ~ ' ' ~ company.getAddress().getStreet() }}
+                                        {{ company.getAddress().getNbStreet() ~ ' ' ~ company.getAddress().getStreet() ~ ', ' ~ company.getAddress().getZipCode() ~ ' ' ~ company.getAddress().getCity()}}
                                     </a>
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
