--- a/templates/dashboard/company/index.html.twig
+++ b/templates/dashboard/company/index.html.twig
@@ -40,19 +40,19 @@
                         </thead>
                         <tbody class="divide-y divide-gray-200 bg-white">
                         {% for company in companies %}
-                            <tr class="hover:bg-gray-100">
+                            <tr class="">
                                 <td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
                                     <a href="{{ path('dashboard_company_show', {'id': company.id}) }}">{{ company.id }}</a>
                                 </td>
-                                <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
                                     {{ company.name|default('null') }}
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
-                                    <a href="{{ path('dashboard_address_show', { id: company.getAddress().getId() }) }}" class="underline opacity-75">
+                                    <a href="{{ path('dashboard_address_show', { id: company.getAddress().getId() }) }}" class="underline opacity-75 hover:bg-gray-100">
                                         {{ company.getAddress().getNbStreet() ~ ' ' ~ company.getAddress().getStreet() ~ ', ' ~ company.getAddress().getZipCode() ~ ' ' ~ company.getAddress().getCity()}}
                                     </a>
                                 </td>
-                                <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
                                     {{ company.getType().getLabel() }}
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
@@ -62,7 +62,7 @@
                                         No
                                     {% endif %}
                                 </td>
-                                <td class="whitespace-nowrap px-6 py-4 text-gray-500">
+                                <td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
                                     {{ company.createdAt|date('Y-m-d') }}
                                 </td>
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
