--- a/templates/dashboard/person/index.html.twig
+++ b/templates/dashboard/person/index.html.twig
@@ -43,17 +43,17 @@
 						</thead>
 						<tbody class="divide-y divide-gray-200 bg-white">
 							{% for person in persons %}
-								<tr class="hover:bg-gray-100">
+								<tr class="">
 									<td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
 										<a href="{{ path('dashboard_person_show', {'id': person.id}) }}">{{ person.id }}</a>
 									</td>
-									<td class="whitespace-nowrap px-6 py-4 text-gray-500">
+									<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
 										{{ person.lastname ?? 'null' }}
 									</td>
 									<td class="whitespace-nowrap px-6 py-4 text-gray-500">
 										{{ person.firstname ?? 'null' }}
 									</td>
-									<td class="whitespace-nowrap px-6 py-4 text-gray-500">
+									<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
 										{{ person.phone ?? 'null' }}
 									</td>
 									<td class="whitespace-nowrap px-6 py-4 text-gray-500">
@@ -63,7 +63,7 @@
 											<b style="color: red">Aucune entreprise</b>
 										{% endif %}
 									</td>
-									<td class="whitespace-nowrap px-6 py-4 text-gray-500">
+									<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
 										{{ person.createdAt|date('Y-m-d') }}
 									</td>
 									<td class="whitespace-nowrap px-6 py-4 text-gray-500">
