--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="relative max-w-5xl mx-auto pt-20 sm:pt-24 lg:pt-32">
     <h1 class="text text-slate-900 font-semibold text-6xl sm:text-6xl lg:text-[108px] tracking-tight text-center ">
-        Drive Success with Our FMS. (Freelance Management System)
+        Drive Success with Our FMS.
     </h1>
     <p class="mt-6 text-slate-900 text-lg text-center max-w-3xl mx-auto">
         Enhance project and freelancer management with our system. Simplify search, collaboration, and mission
