--- a/templates/dashboard/mission/invoice.html.twig
+++ b/templates/dashboard/mission/invoice.html.twig
@@ -77,6 +77,7 @@
 							</td>
 							<td class="whitespace-nowrap px-6 py-4 text-gray-500">
 								<a href="{{ path('dashboard_mission_invoice_edit', { id: invoice.id }) }}">Modifier</a>
+								<a href="{{ path('dashboard_mission_invoice_show', {'id': mission.id, 'invoiceId': invoice.id}) }}">Show</a>
 							</td>
 						</tr>
 						{% else %}
