--- a/templates/dashboard/address/index.html.twig
+++ b/templates/dashboard/address/index.html.twig
@@ -57,7 +57,7 @@
 											Non renseigné
 										{% endif %}
 									</td>
-									<td class="whitespace-nowrap px-6 py-4 text-gray-500 hover:bg-gray-200">
+									<td class="whitespace-nowrap px-6 py-4 text-gray-500">
 										<div class="space-x-1 opacity-80">
 											<a href="{{ path('dashboard_address_show', { id: data.id }) }}">Show</a>
 											<a href="{{ path('dashboard_address_edit', { id: data.id }) }}">Edit</a>
