--- a/templates/dashboard/address/_delete_form.html.twig
+++ b/templates/dashboard/address/_delete_form.html.twig
@@ -1,4 +1,11 @@
-<form method="post" action="{{ path('dashboard_address_delete', {'id': address.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('dashboard_address_delete', {'id': address.id}) }}"
+    onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ address.id) }}">
-    <button class="btn">Delete</button>
+    <button class="relative rounded px-5 py-2.5 overflow-hidden group bg-red-500 relative hover:bg-gradient-to-r
+        hover:from-red-500 hover:to-red-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-red-400
+        transition-all ease-out duration-300">
+        <span
+            class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease"></span>
+        <span class="relative">Supprimer</span>
+    </button>
 </form>
