--- a/templates/dashboard/company/show.html.twig
+++ b/templates/dashboard/company/show.html.twig
@@ -3,27 +3,41 @@
 {% set componentPath = 'dashboard/company/components/' %}
 
 {% block content %}
-    <div>
-        <p>id : {{ company.id }}</p>
-        <p>name : {{ company.name }}</p>
-        <p>address : {{ company.address.city ?? 'null' }}</p>
-        <p>num_tva : {{ company.numTva }}</p>
-        <p>siret : {{ company.siret }}</p>
-        <p>siren : {{ company.siren }}</p>
-        <p>head_office :
-            {% if company.headOffice == true %}
-                <span style="color: green">Yes</span>
-            {% else %}
-                <span style="color: red">No</span>
-            {% endif %}
-        </p>
-        <p>type : {{ company.type.label }}</p>
-        <p>created_at : {{ company.createdAt|date('d/m/Y H:i:s') }}</p>
+<div class="p-10 space-y-3">
+    <p>id : {{ company.id }}</p>
+    <p>name : {{ company.name }}</p>
+    <p>address : {{ company.address.city ?? 'null' }}</p>
+    <p>num_tva : {{ company.numTva }}</p>
+    <p>siret : {{ company.siret }}</p>
+    <p>siren : {{ company.siren }}</p>
+    <p>head_office :
+        {% if company.headOffice == true %}
+        <span style="color: green">Yes</span>
+        {% else %}
+        <span style="color: red">No</span>
+        {% endif %}
+    </p>
+    <p>type : {{ company.type.label }}</p>
+    <p>created_at : {{ company.createdAt|date('d/m/Y H:i:s') }}</p>
+    <div class="space-x-3 flex">
+        <a href="{{ path('dashboard_company_index') }}">
+            <div
+                class="relative rounded px-5 py-2.5 overflow-hidden group bg-slate-500 relative hover:bg-gradient-to-r hover:from-slate-500 hover:to-slate-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-slate-400 transition-all ease-out duration-300">
+                <span
+                    class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease"></span>
+                <span class="relative">Retour</span>
+            </div>
+        </a>
+        {{ include('dashboard/company/_delete_form.html.twig') }}
+        <a href="{{ path('dashboard_company_edit', {id: company.id}) }}">
+            <div
+                class="relative rounded px-5 py-2.5 overflow-hidden group bg-green-500 relative hover:bg-gradient-to-r hover:from-green-500 hover:to-green-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-green-400 transition-all ease-out duration-300">
+                <span
+                    class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease"></span>
+                <span class="relative">Modifier</span>
+            </div>
+        </a>
     </div>
-    <a href="{{ path('dashboard_company_edit', {id: company.id}) }}">Edit</a>
-    <a href="{{ path('dashboard_company_index') }}">Back to list</a>
-
-    {% include 'dashboard/company/_delete_form.html.twig' %}
+</div>
 
 {% endblock %}
-
