--- a/templates/dashboard/user/show.html.twig
+++ b/templates/dashboard/user/show.html.twig
@@ -1,21 +1,37 @@
 {% extends 'dashboard_layout.html.twig' %}
 
 {% block content %}
-    <div>
-        <p>id : {{ user.id }}</p>
-        <p>Person :
-            {% if user.person %}
-                <a href="{{ path('dashboard_person_show', {id: user.person.id}) }}">{{ user.person.firstName }} {{ user.person.lastName }}</a>
-            {% else %}
-                <b style="color: red">Aucune personne</b>
-            {% endif %}
-        </p>
-        <p>Email : {{ user.email }}</p>
-        <p>Roles : {{ user.roles|join(', ') }}</p>
-        <p>Created at : {{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</p>
+<div class="p-10 space-y-3">
+    <p>id : {{ user.id }}</p>
+    <p>Person :
+        {% if user.person %}
+        <a href="{{ path('dashboard_person_show', {id: user.person.id}) }}">{{ user.person.firstName }} {{
+            user.person.lastName }}</a>
+        {% else %}
+        <b style="color: red">Aucune personne</b>
+        {% endif %}
+    </p>
+    <p>Email : {{ user.email }}</p>
+    <p>Roles : {{ user.roles|join(', ') }}</p>
+    <p>Created at : {{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</p>
+    <div class="space-x-3 flex">
+        <a href="{{ path('dashboard_user_index') }}">
+            <div
+                class="relative rounded px-5 py-2.5 overflow-hidden group bg-slate-500 relative hover:bg-gradient-to-r hover:from-slate-500 hover:to-slate-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-slate-400 transition-all ease-out duration-300">
+                <span
+                    class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease"></span>
+                <span class="relative">Retour</span>
+            </div>
+        </a>
+        {{ include('dashboard/user/_delete_form.html.twig') }}
+        <a href="{{ path('dashboard_user_edit', {'id': user.id}) }}">
+            <div
+                class="relative rounded px-5 py-2.5 overflow-hidden group bg-green-500 relative hover:bg-gradient-to-r hover:from-green-500 hover:to-green-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-green-400 transition-all ease-out duration-300">
+                <span
+                    class="absolute right-0 w-8 h-32 -mt-12 transition-all duration-1000 transform translate-x-12 bg-white opacity-10 rotate-12 group-hover:-translate-x-40 ease"></span>
+                <span class="relative">Modifier</span>
+            </div>
+        </a>
     </div>
-    <a href="{{ path('dashboard_user_edit', {id: user.id}) }}">Edit</a>
-    <a href="{{ path('dashboard_user_index') }}">Back to list</a>
-    {{ include('dashboard/user/_delete_form.html.twig') }}
+</div>
 {% endblock %}
-
