--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,17 +5,18 @@
 {% block body %}
 <div class="relative max-w-5xl mx-auto pt-20 sm:pt-24 lg:pt-32">
     <h1 class="text text-slate-900 font-semibold text-6xl sm:text-6xl lg:text-[108px] tracking-tight text-center ">
-        Drive Success with Our FMS.
+        Favorisez le succès avec notre FMS.
     </h1>
     <p class="mt-6 text-slate-900 text-lg text-center max-w-3xl mx-auto">
-        Enhance project and freelancer management with our system. Simplify search, collaboration, and mission
-        tracking for increased productivity.
+        Améliorez la gestion des projets et des indépendants avec notre système. Simplifiez la recherche, la
+        collaboration et la mission
+        suivi pour une productivité accrue.
     </p>
     <div class="mt-6 sm:mt-10 flex justify-center">
         <a href="{{ path('app_login') }}">
             <button
                 class="text-lg roup relative inline-flex h-12 items-center justify-center overflow-hidden rounded-md bg-neutral-950 px-6 text-neutral-200">
-                <span class="text-lg">Get Started</span>
+                <span class="text-lg">Démarrer</span>
                 <div
                     class="absolute inset-0 flex h-full w-full justify-center [transform:skew(-12deg)_translateX(-100%)] group-hover:duration-1000 group-hover:[transform:skew(-12deg)_translateX(100%)]">
                     <div class="relative h-full w-8 bg-white/20"></div>
