--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -18,7 +18,7 @@
             <a href="{{ path('dashboard_index') }}">
                 <button
                     class="group relative inline-flex h-12 items-center justify-center overflow-hidden rounded-md bg-neutral-950 px-6 font-medium text-neutral-200">
-                    <span class="text-lg antialiased">Dashboard</span>
+                    <span class="text-lg antialiased">Dashboard SuperAdmin</span>
                 </button>
             </a>
             <a href="{{ path('app_logout') }}">
