--- a/templates/dashboard/company/new.html.twig
+++ b/templates/dashboard/company/new.html.twig
@@ -2,13 +2,13 @@
 
 {% block content %}
 
-<h2 class="text-xl font-semibold leading-7 text-gray-900 mb-4">Creation d'une company</h2>
+<h2 class="text-xl font-semibold leading-7 text-gray-900 mb-4">Creation d'une entreprise</h2>
 
 {{ form_start(companyForm) }}
 {{ form_widget(companyForm) }}
     <div class="flex justify-end mt-6">
         <div class="space-x-3 flex">
-            <a href="{{ path('dashboard_address_index') }}">
+            <a href="{{ path('dashboard_company_index') }}">
                 <div
                         class="relative rounded px-5 py-2.5 overflow-hidden group bg-slate-500 relative hover:bg-gradient-to-r hover:from-slate-500 hover:to-slate-400 text-white hover:ring-2 hover:ring-offset-2 hover:ring-slate-400 transition-all ease-out duration-300">
                 <span
