--- a/templates/dashboard/address/index.html.twig
+++ b/templates/dashboard/address/index.html.twig
@@ -22,7 +22,7 @@
 							'Rue': 'a.street',
 							'Code Postal': 'a.zipCode',
 							'Ville': 'a.city',
-							'Company': 'c.name'
+							'Entreprise': 'c.name'
 							} %}
 							{% for displayedName, realName in columns %}
 							<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
