--- a/templates/dashboard/address/new.html.twig
+++ b/templates/dashboard/address/new.html.twig
@@ -6,9 +6,7 @@
 <div class="py-12 px-2 sm:px-20">
 
 	<div class="border-b border-gray-900/10 pb-12">
-		<h2 class="text-xl font-semibold leading-7 text-gray-900">Address Information</h2>
-		<p class="mt-1 leading-6 text-gray-600">Vous pouvez consulter, ajouter ou modifier vos adresses ici.
-			Assurez-vous que vos informations d'adresse sont à jour pour une livraison sans problème.</p>
+		<h2 class="text-xl font-semibold leading-7 text-gray-900">Créer une nouvelle adresse postale</h2>
 		<div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
 			<div class="col-span-3">
 				{{ form_row(form.nbStreet) }}</div>
