mission crud + suppression anglais

--- a/templates/dashboard/address/index.html.twig
+++ b/templates/dashboard/address/index.html.twig
@@ -62,7 +62,7 @@
 							<td class="whitespace-nowrap px-6 py-4 text-gray-500">
 								<div class="space-x-1 opacity-80">
 									<a href="{{ path('dashboard_address_show', { id: data.id }) }}">Détails</a>
-									<a href="{{ path('dashboard_address_edit', { id: data.id }) }}">Modifié</a>
+									<a href="{{ path('dashboard_address_edit', { id: data.id }) }}">Modifier</a>
 								</div>
 							</td>
 						</tr>
