--- a/templates/dashboard/person/index.html.twig
+++ b/templates/dashboard/person/index.html.twig
@@ -69,7 +69,7 @@
 									<td class="whitespace-nowrap px-6 py-4 text-gray-500">
 										<div class="space-x-1 opacity-80">
 											<a href="{{ path('dashboard_person_show', { id: person.id }) }}">Détails</a>
-											<a href="{{ path('dashboard_person_edit', { id: person.id }) }}">Modifié</a>
+											<a href="{{ path('dashboard_person_edit', { id: person.id }) }}">Modifier</a>
 										</div>
 									</td>
 								</tr>
