--- a/templates/dashboard/company/index.html.twig
+++ b/templates/dashboard/company/index.html.twig
@@ -66,7 +66,7 @@
                                 <td class="whitespace-nowrap px-6 py-4 text-gray-500">
                                     <div class="space-x-1 opacity-80">
                                         <a href="{{ path('dashboard_company_show', { id: company.id }) }}">Détails</a>
-                                        <a href="{{ path('dashboard_company_edit', { id: company.id }) }}">Modifié</a>
+                                        <a href="{{ path('dashboard_company_edit', { id: company.id }) }}">Modifier</a>
                                     </div>
                                 </td>
                             </tr>
@@ -74,6 +74,8 @@
                         </tbody>
                     </table>
                 </div>
+                {{ knp_pagination_render(companies, 'dashboard/components/tailwind_pagination.html.twig',
+                    {'slidingPagination': false}) }}
             </div>
         </div>
     </section>
