--- a/templates/dashboard/mission/index.html.twig
+++ b/templates/dashboard/mission/index.html.twig
@@ -18,14 +18,84 @@
 
 					<table class="min-w-full divide-y divide-gray-300">
 
-						<thead class="bg-gray-50 w-full">
-							{% include 'dashboard/components/table_header_row.html.twig' with {'columns': ['Id', 'Nom', 'Description', 'Prix', 'Client', 'Administrateur', 'Fini', 'Créer le', 'Actions']} %}
+						<thead class="bg-gray-50">
+							<tr>
+								{% set columns = {
+									'Id': 'm.id',
+									'Nom': 'm.name',
+									'Description': 'm.description',
+									'Prix': 'm.price',
+									'Client': 'c.name',
+									'Administrateur': 'c.name',
+									'Fini': 'm.finished',
+									'Créer le': 'm.createdAt'
+								} %}
+								{% for displayedName, realName in columns %}
+									<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+										{{ knp_pagination_sortable(missions, displayedName, realName) }}
+									</th>
+								{% endfor %}
+								<th scope="col" class="py-3 px-6 text-left font-semibold text-gray-900">
+									Actions
+								</th>
+							</tr>
 						</thead>
 
-						{% include componentPath ~ 'table_body.html.twig' %}
-
+						<tbody class="divide-y divide-gray-200 bg-white">
+						{% for mission in missions %}
+							<tr>
+								<td class="whitespace-nowrap px-6 py-4 font-medium text-gray-900 sm:pl-6">
+									{{ mission.id }}
+								</td>
+								<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
+									{{ mission.name }}
+								</td>
+								<td class="whitespace-nowrap px-6 py-4 text-gray-500">
+									{{ mission.description|length > 30 ? mission.description|slice(0, 30) ~ '...' : mission.description }}
+								</td>
+								<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
+									{% if mission.price is null or mission.price == 0 %}
+										<span class="font-bold text-red-600">non défini</span>
+									{% else %}
+										{{ mission.price|number_format(2, ',', ' ') }}
+									{% endif %}
+								</td>
+								<td class="whitespace-nowrap px-6 py-4 text-gray-500">
+									<a href="{{ path('dashboard_company_show', { id: mission.getClient().getId() }) }}"
+									   class="underline opacity-75">
+										{{ mission.getClient().getName() }}
+									</a>
+								</td>
+								<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
+									<a href="{{ path('dashboard_company_show', { id: mission.getManager().getId() }) }}"
+									   class="underline opacity-75">
+										{{ mission.getManager().getName() }}
+									</a>
+								</td>
+								<td class="whitespace-nowrap px-6 py-4 text-gray-500">
+									{% if mission.isfinished == 'yes' %}
+										<span class="text-green-600">Oui</span>
+									{% else %}
+										<span>Non</span>
+									{% endif %}
+								</td>
+								<td class="whitespace-nowrap px-6 py-4 text-gray-500 bg-gray-200">
+									{{ mission.createdAt|date('Y-m-d') }}
+								</td>
+								<td class="whitespace-nowrap px-6 py-4 text-gray-500">
+									<div class="space-x-1 opacity-80">
+										<a href="{{ path('dashboard_mission_show', { id: mission.id }) }}">Détails</a>
+										<a href="{{ path('dashboard_mission_edit', { id: mission.id }) }}">Modifier</a>
+										<a href="{{ path('dashboard_mission_invoice', { id: mission.id }) }}">Factures</a>
+									</div>
+								</td>
+							</tr>
+						{% endfor %}
+						</tbody>
 					</table>
 				</div>
+				{{ knp_pagination_render(missions, 'dashboard/components/tailwind_pagination.html.twig',
+					{'slidingPagination': false}) }}
 			</div>
 		</div>
 	</section>
