--- a/templates/dashboard/supplier/index.html.twig
+++ b/templates/dashboard/supplier/index.html.twig
@@ -56,6 +56,8 @@
 						</tbody>
 					</table>
 				</div>
+				{{ knp_pagination_render(supplierMissions, 'dashboard/components/tailwind_pagination.html.twig',
+					{'slidingPagination': false}) }}
 			</div>
 		</div>
 	</section>
