--- a/templates/dashboard/user/index.html.twig
+++ b/templates/dashboard/user/index.html.twig
@@ -66,7 +66,7 @@
 							<td class="whitespace-nowrap px-6 py-4 text-gray-500">
 								<div class="space-x-1 opacity-80">
 									<a href="{{ path('dashboard_user_show', { id: user.id }) }}">Détails</a>
-									<a href="{{ path('dashboard_user_edit', { id: user.id }) }}">Modifié</a>
+									<a href="{{ path('dashboard_user_edit', { id: user.id }) }}">Modifier</a>
 								</div>
 							</td>
 						</tr>
